--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background:linear-gradient(-120deg, #D62121, #C72C2C, #3a1111);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  border-radius: 5px;
+  color: white;
+  background: none;
+  border: 2px solid white;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  background: #C72C2C;
+  
 }
